# 1_work

./: .gitignore  CNAME  README.md  _config.yml
Exam/: README.md  exam.py  note.ipynb
Exam_2/: README.MD  pyproject.toml
Exam_2/agent_parking/: agent.py
Exam_2/agent_parking/.adk/: session.db
Lab 1/: 1_lab.py  LAB_1.MD  Notepad.py  README.MD  main.py  note.ipynb
Lab 3/: python_basics_lab.ipynb
Lab 4/: Lab_4.ipynb  Lab_4.py  README.md
Lab 5/: README.md  classes.ipynb
Lab 6/: Lab.ipynb  README.md
Lab 7/: .gitignore  README.MD  test.py
Lab 7/myproject/: .gitignore  app.py  server.py
Lab_8/: README.MD  pyproject.toml
Lab_8/.github/workflows/: agent_pipeline.yml
Lab_8/code_pipeline/: agent.py
Lab_8/code_pipeline/.adk/: session.db
Lab_8/conversation_agent/: agent.py
Lab_8/conversation_agent/.adk/: session.db
Lab_8/creative_writer/: agent.py
Lab_8/creative_writer/.adk/: session.db
Lab_8/math_agent/: agent.py
Lab_8/math_agent/.adk/: session.db
Lab_8/my_first_agent/: agent.py
Lab_8/my_first_agent/.adk/: session.db
Lab_8/probability_theory/: agent.py
Lab_8/probability_theory/.adk/: session.db
Lab_8/research_team/.adk/: session.db
Lab_8/stateful_agent/: agent.py  user_state.json
Lab_8/stateful_agent/.adk/: session.db
Lab_8/story_improver/: agent.py
Lab_8/story_improver/.adk/: session.db
Lab_8/student_helper/: agent.py
Lab_8/student_helper/.adk/: session.db
Lab_8/work_flow/: agent.py
Lab_8/work_flow/.adk/: session.db
