[project]
name = "exam-2"
version = "0.1.0"
description = "Система управління паркінгом з AI-агентом"
authors = [
    {name = "Vladan",email = "vlad.shershun.02@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "google-adk (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
